# dungenerator

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  SPEC.md  dungeonroom.py  generator.py  models.py  pyproject.toml  renderer.py  shapes.py  stocking.py
.claude/: settings.local.json
data/: monster_db.json  monster_tables.json  monsters.yaml  non_combat_encounters.json  non_combat_encounters.yaml  themes.yaml  treasures.json  treasures.yaml
data/themes/: themes.json
dungeonroom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_generator.py  test_renderer.py  test_stocking.py
