[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeonroom"
version = "1.0.0"
description = "OSE Solo Dungeon Room Generator"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
]

[project.scripts]
dungeonroom = "dungeonroom:main"

[tool.setuptools]
py-modules = ["dungeonroom", "generator", "renderer", "stocking", "models"]

[tool.setuptools.package-data]
"*" = ["data/*.json", "data/themes/*.json"]
